--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <canvas id="mycanvas"></canvas>
         <input type="text"id="textInput" placeholder="type something">
         <script src="app.js" async defer></script>
-        <footer> 2023 @adarshraj </footer>
+    <footer> © 2023 adarshraj</footer>
     </body>
 </html>
